--- a/VRChat/21/1131021.html
+++ b/VRChat/21/1131021.html
@@ -78,10 +78,11 @@
     "display:none;visibility:hidden" width="0"></iframe></noscript>
     <div class="page-wrap">
       <main role="main">
-        <div class="market-item-detail" data-product-brand=
-        "shin-itagaki" data-product-category="125" data-product-id=
-        "1131021" data-product-list="market_show"
-        data-product-price="0" data-tracking="detail_item">
+        <div class="market-item-detail u-bg-white"
+        data-product-brand="shin-itagaki" data-product-category=
+        "125" data-product-id="1131021" data-product-list=
+        "market_show" data-product-price="0" data-tracking=
+        "detail_item">
           <nav>
             <div class="breadcrumbs u-border-b u-border-100">
               <div class="container">
@@ -105,17 +106,17 @@
             </div>
           </nav>
           <article>
-            <div class="market-item-detail-article">
+            <div class=
+            "market-item-detail-article u-d-flex u-flex-column u-align-items-center u-pb-600 u-bg-white">
               <div class=
               "market-item-detail__exhibition-banner container">
               </div>
-              <div class="market-item-detail-article__body">
+              <div class="u-bg-white u-pt-600 u-px-700">
                 <div class="container">
-                  <div class="lo-grid">
-                    <div class="flex-order-summary">
+                  <div class="u-d-flex">
+                    <div class="u-order-1 l-col-2of5 u-pl-600">
                       <header>
-                        <div class=
-                        "flex-order-summary-shop_name-field">
+                        <div class="u-my-200 u-tpg-title3">
                           <a class="nav" target="_blank"
                           data-product-list=
                           "from market_show via market_item_detail to shop_index"
@@ -126,13 +127,13 @@
                             <img alt="Shin Itagaki" class=
                             "user-avatar at-item-summary" src=
                             "https://booth.pximg.net/c/48x48/users/3343597/icon_image/a06a8b9f-19bc-47cb-ad37-65e0162dfb61_base_resized.jpg">
-                            <div class=
-                            "flex-order-summary-shop_name">
+                            <div class="u-text-ellipsis">
                               Shin Itagaki
                             </div>
                           </div></a>
                         </div>
-                        <h2 class="item-summary__item-name">
+                        <h2 class=
+                        "u-text-wrap u-tpg-title1 u-mt-0 u-mb-400">
                           【VRoid】瞳テクスチャセットVol.1【20種類】
                         </h2>
                         <div class="item-summary__caption"></div>
@@ -258,18 +259,17 @@
                         </ul>
                       </section>
                       <section>
-                        <div class="share-btns">
-                          <div class="social-btn twitter">
-                            <a data-url=
-                            "https://booth.pm/ja/items/1131021"
-                            data-lang="ja" data-hashtags="booth_pm"
-                            data-text=
-                            "【VRoid】瞳テクスチャセットVol.1【20種類】 | Shin Itagaki"
-                            data-count="none" class=
-                            "twitter-share-button" href=
-                            "https://twitter.com/share">ツイート</a>
-                          </div>
-                          <div class="social-btn facebook">
+                        <div class=
+                        "share-btns u-d-flex u-flex-1 u-align-items-center u-justify-content-start u-px-200 u-py-400">
+                          <a data-url=
+                          "https://booth.pm/ja/items/1131021"
+                          data-lang="ja" data-hashtags="booth_pm"
+                          data-text=
+                          "【VRoid】瞳テクスチャセットVol.1【20種類】 | Shin Itagaki"
+                          data-count="none" class=
+                          "twitter-share-button" href=
+                          "https://twitter.com/share">ツイート</a>
+                          <div class="u-ml-300">
                             <div class="fb-like" data-action="like"
                             data-href=
                             "https://booth.pm/ja/items/1131021"
@@ -279,7 +279,7 @@
                         </div>
                       </section>
                     </div>
-                    <div class="flex-order-body">
+                    <div class="u-order-0 l-col-3of5 u-pr-500">
                       <div class="primary-image-area">
                         <div>
                           <div class=
@@ -352,8 +352,8 @@
                       </div>
                       <section>
                         <div class=
-                        "market-item-detail-description">
-                          <p class="autolink">
+                        "js-market-item-detail-description">
+                          <p class="autolink u-text-wrap">
                             【4/19】
                             いいね100件超え感謝記念として有償(100円)のPSDファイル付きも無料DLにしましたのでどんどこ使ってね
                             ■セール終了期間→セール終了しようかなっておもったとき
@@ -379,8 +379,7 @@
                         </div>
                       </section>
                       <section>
-                        <div class=
-                        "market-item-detail-module page_design" id=
+                        <div class="u-text-wrap page_design" id=
                         "modules"></div>
                       </section>
                     </div>
